Co-authored-by: guilherme rodrigues borba <guilhermeborba13@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
         <img src="./img/Combo.png" alt="detalhes-promoção-combo">
 
-        <button>
-            Assine por 12x de R$ 120,00*
-        </button>
-        <button>
-            Assinar somente o Alura+
-        </button>
+       
+        <a class="container__btn" href="alura.com.br"> Assine por 12x de R$ 120,00*</a>
+        
     </main>
 </body>
 </html>
