--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 <body>
 
     <main class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="./img/Combo.png" alt="detalhes-promoção-combo">
 
-       
-        <a class="container__btn" href="alura.com.br"> Assine por 12x de R$ 120,00*</a>
+        <div>
+            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="./img/Combo.png" alt="detalhes-promoção-combo">
+
+            <a class="container__btn" href="alura.com.br"> Assine por 12x de R$ 120,00*</a>
+            <a class="container__btn botao_secundario" href="alura.com.br">Assinar somente o Alura+</a>
+
+            <span class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</span>
+        </div>
         
     </main>
 </body>
