--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <main class="container principal">
 
-        <div>
+        <div class="container__caixa">
             <h1 class="container__titulo1">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="./img/Combo.png" alt="detalhes-promoção-combo">
+            <img src="./img/Combo.png" alt="detalhes-promoção-combo" class="container__imagem">
 
             <a class="container__btn" href="https://www.alura.com.br/" target="_blank"> Assine por 12x de R$ 120,00*</a>
             <a class="container__btn botao_secundario" href="https://www.alura.com.br/" target="_blank">Assinar somente o Alura+</a>
