--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         </div> 
     </main>
 
+
     <section class="container secundario">
 
-        <img src="./img/Plataformas.png" alt="tela do computador e celular com a tela do alura +" class="container__imagem">
+        <img src="./img/Plataformas.png" alt="tela do computador e celular com a tela do alura +" class="secundario__imagem">
 
         <div class="container__descricao">
             <h2 class="descricao__titulo">
@@ -45,7 +46,7 @@
             <a class="container__btn btn__secundario" href="https://www.alura.com.br/" target="_blank">Assine o Combo+</a>
         </div>
 
-        <img src="./img/Telas.png" alt="tela com a plataforma Alura lingua">
+        <img src="./img/Telas.png" alt="tela com a plataforma Alura lingua" class="container__imagem">
         
     </section>
 
